# TP_project

./: CMakeLists.txt  GameArchitecture.md  GameModel.md  README.md  main.cpp
Client/: ClientArmy.cpp  ClientArmy.h  ClientMain.cpp  ClientMain.h
Factories/: CMakeLists.txt  EnglandUnitFactory.cpp  EnglandUnitFactory.h  FranceUnitFactory.cpp  FranceUnitFactory.h  UnitFactory.h
States/: Context.cpp  Context.h  EconomicState.cpp  EconomicState.h  MartialState.cpp  MartialState.h  State.cpp  State.h
Units/: Archer.cpp  Archer.h  CMakeLists.txt  CompositeUnit.cpp  CompositeUnit.h  Swordsman.cpp  Swordsman.h  Unit.cpp  Unit.h  Warrior.cpp  Warrior.h
